--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -337,7 +337,7 @@ body.visual-effects {
   }
 
   img {
-    object-fit: cover;
+    object-fit: contain;
     width: $full;
     height: $full;
   }
