error page style updated

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -366,4 +366,8 @@ body.visual-effects {
     scroll-behavior: auto;
     scrollbar-width: none;
   }
+
+  .jonopath-container.mobcontainer {
+    padding-inline: 0;
+  }
 }
